# xdvdfs

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
.github/workflows/: check.yml  ci.yml  deploy.yml  nix.yml  nostd.yml
src/: blockdev.rs  layout.rs  read.rs
tests/: harness.py  img.py  test.py
xdvdfs-cci/: Cargo.toml
xdvdfs-cci/src/: lib.rs
xdvdfs-cli/: Cargo.toml  README.md
xdvdfs-cli/src/: cmd_bmark.rs  cmd_build_image.rs  cmd_cci.rs  cmd_compress.rs  cmd_info.rs  cmd_md5.rs  cmd_pack.rs  cmd_patch.rs  cmd_read.rs  cmd_unpack.rs  executor.rs  exiso_compat.rs  img.rs  main.rs  progress.rs
xdvdfs-core/: Cargo.toml  README.md
xdvdfs-core/src/: blockdev.rs  checksum.rs  layout.rs  lib.rs  read.rs  util.rs
xdvdfs-core/src/blockdev/: byte_slice.rs  copier.rs  mod.rs  null.rs  offset.rs  read.rs  write.rs
xdvdfs-core/src/layout/: attributes.rs  dirent_node.rs  disk_data.rs  disk_node.rs  mod.rs  name.rs  region.rs  table.rs  volume.rs  write.rs
xdvdfs-core/src/read/: dirent_node.rs  dirent_table.rs  disk_data.rs  mod.rs  scan_iter.rs  volume.rs
xdvdfs-core/src/write/: avl.rs  dirtab.rs  fs.rs  img.rs  mod.rs  progress_info.rs  sector.rs  util.rs  xbepatch.rs
xdvdfs-core/src/write/fs/: copier.rs  hierarchy.rs  memory.rs  mod.rs  remap.rs  sector_linear.rs  stdfs.rs  xdvdfs.rs
xdvdfs-core/src/write/fs/path/: borrow.rs  mod.rs  pathref.rs  pathtrie.rs  pathvec.rs  serde.rs
xdvdfs-core/src/write/fs/path/pathref/: cmp.rs  display.rs  eq.rs  from.rs  iter.rs  joined.rs  mod.rs
xdvdfs-core/src/write/fs/path/pathtrie/: iter.rs  mod.rs  subtree.rs  subtree_iter.rs
xdvdfs-core/src/write/fs/sector_linear/: block_device.rs  block_filesystem.rs  deferred_reader.rs  linear_image.rs  mod.rs
xdvdfs-core/src/write/fs/xdvdfs/: copier.rs  mod.rs
xdvdfs-desktop/: Cargo.toml  tauri.conf.json
xdvdfs-desktop/src/: compress.rs  main.rs  pack.rs  unpack.rs
xdvdfs-fsd/: Cargo.toml  README.md
xdvdfs-fsd/src/: daemonize.rs  hostutils.rs  img_fs.rs  inode.rs  main.rs  mount.rs
xdvdfs-fsd/src/fsproto/: fuse.rs  mod.rs  nfs.rs
xdvdfs-fsd/src/overlay_fs/: hostfs.rs  mod.rs  packfs.rs  truncatefs.rs
xdvdfs-fsd/src/overlay_fs/hostfs/: host_dir.rs  host_file.rs  mod.rs
xdvdfs-web/: Cargo.toml  build.rs  index.html
xdvdfs-web/src/: compress.rs  fs.rs  img_workflow.rs  info.rs  main.rs  packing.rs  picker.js  picker.rs  unpacking.rs
xdvdfs-web/src/fs/: bindings.rs  ciso.rs  mod.rs  util.rs
xdvdfs-web/src/ops/: browser.rs  mod.rs  tauri.js  tauri.rs
xdvdfs-web/src/picker/: browser.js  browser.rs  mod.rs  tauri.js  tauri.rs
