[workspace]

members = [
    "xdvdfs-core",
    "xdvdfs-cli",
]

[workspace.package]
license = "MIT"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/antangelo/xdvdfs"
homepage = "https://github.com/antangelo/xdvdfs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
