[workspace]
members = [
    "xdvdfs-core",
    "xdvdfs-cli",
    "xdvdfs-web",
]

[workspace.package]
license = "MIT"
version = "0.5.2"
edition = "2021"
repository = "https://github.com/antangelo/xdvdfs"
homepage = "https://github.com/antangelo/xdvdfs"

[profile.release]
strip = "debuginfo"
lto = true

# FIXME: https://github.com/rust-lang/rust/issues/93294
# This cuts down on binary size by quite a bit, but breaks web
#strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
