[workspace]
members = [
  "xdvdfs-core",
  "xdvdfs-cli",
  "xdvdfs-web",
  "xdvdfs-desktop",
  "xdvdfs-fsd",

  "third_party/nfsserve",
]

default-members = [
  "xdvdfs-core",
  "xdvdfs-cli",
]

resolver = "2"

[workspace.package]
license = "MIT"
version = "0.9.0"
edition = "2021"
repository = "https://github.com/antangelo/xdvdfs"
homepage = "https://github.com/antangelo/xdvdfs"

[profile.release]
strip = "debuginfo"
lto = true

# FIXME: https://github.com/rust-lang/rust/issues/93294
# This cuts down on binary size by quite a bit, but breaks web
#strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
