[package]
name = "xdvdfs-cci"
description = "CCI (LZ4 Xbox disc container) read/write per Team-Resurgent XboxToolkit format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
lz4_flex = { version = "0.11.6", default-features = false, features = ["std"] }
thiserror = { version = "2.0.14", default-features = false, features = ["std"] }
