[package]
name = "xdvdfs-cli"
description = "Tool for interacting with XISO/XDVDFS images"
keywords = ["cli", "filesystem", "xdvdfs"]
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

exclude = ["**/*.iso", "**/*.xiso"]

[dependencies]
xdvdfs = { path = "../xdvdfs-core", version = "0.5.0" }
clap = { version = "4.2.1", features = ["derive"] }
md-5 = { version = "0.10.5", default-features = false }
futures = "0.3.28"
anyhow = "1.0.71"
env_logger = "0.10.0"

[[bin]]
name = "xdvdfs"
path = "src/main.rs"
