[package]
name = "xdvdfs-cli"
description = "Tool for interacting with XISO/XDVDFS images"
keywords = ["cli", "filesystem", "xdvdfs"]
readme = "README.md"
default-run = "xdvdfs"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

exclude = ["**/*.iso", "**/*.xiso"]

[dependencies]
xdvdfs = { path = "../xdvdfs-core", version = "0.9.0" }
clap = { version = "4.2.1", features = ["derive"] }
md-5 = { version = "0.10.5", default-features = false }
futures = "0.3.28"
anyhow = "1.0.71"
env_logger = "0.10.0"
maybe-async = "0.2.7"
ciso = { version = "0.3.0", default-features = false }
async-trait = "0.1.73"
toml = { version = "0.8.19", features = ["preserve_order"] }
serde = "1.0.209"

[features]
sync = ["xdvdfs/sync", "maybe-async/is_sync"]

[[bin]]
name = "xdvdfs"
path = "src/main.rs"
