[package]
name = "xdvdfs"
description = "Library for interacting with XISO/XDVDFS images"
keywords = ["no_std", "filesystem", "xdvdfs"]
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

exclude = ["**/*.iso", "**/*.xiso"]

[dependencies]
bincode = "1.3.3"
proc-bitfield = "0.2.2"
serde = { version = "1.0.159", default-features = false, features = ["derive", "alloc"] }
serde-big-array = "0.5.1"
async-trait = { version = "0.1.68" }
encoding_rs = "0.8.32"
maybe-async = "0.2.7"

# optional
arrayvec = { version = "0.7.2", default-features = false, optional = true}
log = { version = "0.4.17", optional = true }
sha3 = { version = "0.10.8", optional = true, default-features = false }

[features]
default = ["std", "read", "write", "logging", "checksum"]
std = ["serde/std", "arrayvec/std", "sha3/std"]
read = []
write = ["std", "arrayvec"]
logging = ["log"]
sync = ["maybe-async/is_sync"]
checksum = ["sha3"]

[lib]

[dev-dependencies]
rand = "0.8.5"
futures = "0.3.28"
