[package]
name = "xdvdfs-desktop"
description = "Desktop app for interacting with XISO/XDVDFS images"
default-run = "xdvdfs-desktop"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

exclude = ["**/*.iso", "**/*.xiso"]

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [ "api-all"] }
xdvdfs = { path = "../xdvdfs-core", version = "0.8.2" }
ciso = { version = "0.2.0", default-features = false }
maybe-async = "0.2.7"
async-trait = "0.1.75"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
