[package]
name = "xdvdfs-fsd"
description = "XDVDFS platform filesystem daemon"
keywords = ["xdvdfs", "fuse", "filesystem"]

license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

exclude = ["**/*.iso", "**/*.xiso"]

[dependencies]
xdvdfs = { path = "../xdvdfs-core", version = "0.9.0" }
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1.43.1", features = ["full"] } # FIXME
anyhow = "1.0.71"
env_logger = "0.10.0"
libc = "0.2.169"
log = "0.4.17"
nfsserve = { path = "../third_party/nfsserve" }
async-trait = "0.1.88"

[target.'cfg(unix)'.dependencies]
fuser = { version = "0.16.0", default-features = false, optional = true }
nix = { version = "0.29.0", features = ["process"] }

[features]
default = ["fuse"]
fuse = ["dep:fuser"]
sync = ["xdvdfs/sync"]

[[bin]]
name = "xdvdfsd"
path = "src/main.rs"
