[package]
name = "xdvdfs-web"
description = "Web tool for building XISO/XDVDFS images"
keywords = ["web", "filesystem", "wasm", "xdvdfs"]

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

exclude = ["**/*.iso", "**/*.xiso"]

[dependencies]
async-recursion = "1.0.4"
async-trait = "0.1.68"
implicit-clone = "0.3.5"
js-sys = "0.3.61"
log = "0.4.17"
serde = "1.0.160"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["WritableStream", "MediaQueryList", "Window"] }
xdvdfs = { path = "../xdvdfs-core", version = "0.5.1" }
yew = { version = "0.20.0", features = ["csr"] }
yewprint = "0.4.4"
